# mtp-server

./: CMakeLists.txt  mtp-server.service
debian/: control  copyright  mtp-server.install  mtp-server.mtp-configfs.service
include/: MtpDevice.h  MtpServer.h  MtpTypes.h
libusbhost/: CMakeLists.txt
mtp-configfs/: CMakeLists.txt  io.FuriOS.USBConfig.conf  io.FuriOS.USBConfig.xml  isodrive.c  isodrive.h  mtp-configfs  usb-config.c  utils.c  utils.h
rules/: 90-mtp.rules
server/: DroidianMtpDatabase.h  server.cpp
src/: MtpDataPacket.cpp  MtpDevice.cpp  MtpEventPacket.cpp  MtpPacket.cpp  MtpProperty.cpp  MtpRequestPacket.cpp  MtpServer.cpp  MtpStorageInfo.cpp  MtpUtils.cpp
